<resources>
    <string name="app_name">Android3HomeWork!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="age">возраст</string>
    <string name="user_name">Имя пользователя</string>
    <string name="shared_preference_name">preference_name</string>
    <string name="save">Сохранить</string>
    <string name="go">Перейти</string>
</resources>