<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ui.fragment.EditFragment">

    <EditText
        android:id="@+id/et_name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:text="@string/go"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content"/>

</LinearLayout>